k8s/test/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: myapp
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8000
    protocol: TCP
